# kafka-connect-sqlserver

./: README.md
c++/consumer/: CMakeLists.txt  Consumer.cpp  README.md
kafka-properties/: README.md  sink-postgres-user.properties  source-sqlserver-user.properties
node/: README.md  consumer.js  package.json
scala/: README.md  build.sbt
scala/src/main/resources/: simplelogger.properties
scala/src/main/scala/: Main.scala  data.scala  model.scala
